--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "test",
-    "dev": "nodemon .",
+    "dev": "nodemon --ignore 'src/permisos.json' .",
     "start": "node ."
   },
   "author": "McYoinetLTS",
@@ -21,7 +21,6 @@
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "googleapis": "^92.0.0",
-    "pastebin-api": "^2.6.1"
+    "googleapis": "^92.0.0"
   }
 }
